@@ -360,6 +360,21 @@ install_dialog_response (GtkWidget *widget, int response_id, gpointer data)
 	GnomeVFSURI *src_uri;
 	const gchar *raw;
 	
+	if (response_id == GTK_RESPONSE_HELP) {
+		GError *error = NULL;
+
+		/* TODO : get this written */
+		gnome_help_display_desktop (NULL,
+			"control-center-manual",
+			"config-themes.xml",
+			"config-theme-add", &error);
+		if (error) {
+			g_warning ("help error: %s\n", error->message);
+			g_error_free (error);
+		}
+		return;
+	}
+
 	gtk_widget_hide (widget);
 	
 	switch (response_id)
@@ -409,7 +424,7 @@ cb_dialog_response (GtkDialog *dialog, gint response_id)
 		/* TODO : get this written */
 		gnome_help_display_desktop (NULL,
 			"control-center-manual",
-			"config-theme.xml",
+			"config-themes.xml",
 			"CONFIGURATION", &error);
 		if (error) {
 			g_warning ("help error: %s\n", error->message);
