@@ -1,3 +1,8 @@
+2002-05-16  Jody Goldberg <jody@gnome.org>
+
+	* theme-switcher.c (cb_dialog_response) : fix path.
+	(install_dialog_response) : add help link.
+
 Tue May 14 12:29:35 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* theme-switcher.c (read_themes): try to scroll to theme.
